<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Foodsharing</string>
    <string name="login_subtitle" translatable="false">Save + Share food, reduce waste</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="select_server" translatable="false">Server</string>
    <string name="server_production" translatable="false">foodsharing.de (production)</string>
    <string name="server_beta" translatable="false">beta.foodsharing.de</string>

    <string name="baskets">Baskets</string>
    <string name="nearby_baskets">Nearby Baskets to Home🏠</string>
    <string name="my_baskets">My Baskets</string>
    <string name="basket_detail">Basket</string>
    <string name="add_basket">Add Basket</string>
    <string name="basket_description">Description</string>
    <string name="basket_lifetime">Lifetime (days)</string>
    <string name="default_basket_lifetime" translatable="false">7</string>
    <string name="basket_weight">Weight (grams)</string>
    <string name="request_basket">Request this basket</string>
    <string name="request_message_hint">Enter a message for the owner</string>
    <string name="error_message_required">Message is mandatory</string>
    <string name="basket_request_sent">Request sent!</string>
    <string name="no_baskets_nearby">No baskets nearby</string>
    <string name="no_baskets">You have no baskets yet</string>

    <string name="conversations">Messages</string>
    <string name="messages">Messages</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="type_message">Type a message…</string>
    <string name="send">Send</string>
    <string name="no_conversations">No conversations</string>

    <string name="pickups">Pickups</string>
    <string name="registered_pickups">My Upcoming Pickups</string>
    <string name="available_pickups">Available Slots</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="pickup_store_unconfirmed">%1$s ⏳</string>
    <string name="pickup_slots_format">%1$d/%2$d slots</string>

    <string name="profile">Profile</string>
    <string name="about_me">About Me</string>
    <string name="settings">Settings</string>
    <string name="settings_saved">Settings saved</string>
    <string name="refresh_interval">Background refresh interval</string>
    <string name="settings_interval_note">Note: Android enforces a minimum background interval of 15 minutes.</string>
    <string name="notifications">Notifications</string>
    <string name="notify_messages">New messages</string>
    <string name="notify_baskets">Nearby baskets</string>
    <string name="notify_pickups">Pickup reminders</string>
    <string name="basket_distance_km">Basket search distance (km)</string>
    <string name="save">Save</string>

    <!-- Notification channels -->
    <string name="notif_channel_messages">Messages</string>
    <string name="notif_channel_messages_desc">Notifications for new messages</string>
    <string name="notif_channel_baskets">Nearby Baskets</string>
    <string name="notif_channel_baskets_desc">Notifications for new food baskets near you</string>
    <string name="notif_channel_pickups">Pickup Reminders</string>
    <string name="notif_channel_pickups_desc">Reminders for upcoming pickups</string>
    <string name="notif_channel_auth">Account</string>
    <string name="notif_channel_auth_desc">Sign-in and session alerts</string>

    <!-- Notification content -->
    <string name="notif_new_message">New message</string>
    <string name="notif_new_basket">New basket nearby</string>
    <string name="notif_pickup_reminder">Upcoming pickup</string>
    <string name="notif_session_expired">Session expired</string>
    <string name="notif_session_expired_desc">Tap to sign in again.</string>
</resources>
